[project]
name = "vr-foraging-data-transfer-post-acquisition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aind-behavior-vr-foraging[launcher]",
    "ruff",
    ]

[tool.uv.sources]
aind-behavior-vr-foraging = { path = "./Aind.Behavior.VrForaging" }